--- a/index.html
+++ b/index.html
@@ -6,23 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Blocks</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="debug">
+<body>
 
     <header>
         <!-- HEADER SOPRA -->
         <div class="header-top">
-            <div class="container nav">
-                <div class="nav-logo">logo</div>
-                <div class="nav-links">link link link link link</div>
-                <div class="nav-login">login</div>
-            </div>
+            <nav class="nav">
+                <div class="nav-logo">
+                    <a href="#"><img src="img/logo.svg" alt="Discord Logo"></a>
+                </div>
+                <ul class="nav-links">
+                    <li> <a href="#">Scarica</a> </li>
+                    <li> <a href="#">Perchè Discord</a> </li>
+                    <li> <a href="#">Nitro</a> </li>
+                    <li> <a href="#">Sicurezza</a> </li>
+                    <li> <a href="#">Assistenza</a> </li>
+                </ul>
+                <div class="nav-login">
+                    <button class="btn btn-light">Accedi</button>
+                </div>
+            </nav>
         </div>
         
         <!-- HEADER SOTTO -->
         <div class="header-bottom">
             <div class="container block">
-                <div class="header-block">&nbsp</div>  
+                <div class="header-block">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="btn-header">
+                        <button class="btn btn-light">
+                            <i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac
+                        </button>
+                        <button class="btn btn-dark">Apri Discord nel tuo browser</button>
+                    </div>
+                </div>  
             </div> 
         </div>
 
