--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="btn-header">
                         <button class="btn btn-light">
-                            <i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac
+                            <i class="fa-solid fa-arrow-down-long"></i>
+                            Scarica per Mac
                         </button>
                         <button class="btn btn-dark">Apri Discord nel tuo browser</button>
                     </div>
@@ -55,28 +56,53 @@
         <!-- SEZIONI -->
         <section>
             <div class="container block">
-                <div class="block-big">&nbsp</div>
-                <div class="block-small">&nbsp</div>
+                <div class="block-big">
+                    <img src="img/item1.svg" alt="...">
+                </div>
+                <div class="block-small">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
         <section>
             <div class="container block">
-                <div class="block-small">&nbsp</div>
-                <div class="block-big">&nbsp</div>
+                <div class="block-small">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere chi sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="block-big">
+                    <img src="img/item2.svg" alt="...">
+                </div>
             </div>
         </section>
 
         <section>
             <div class="container block">
-                <div class="block-big">&nbsp</div>
-                <div class="block-small">&nbsp</div>
+                <div class="block-big">
+                    <img src="img/item3.svg" alt="">
+                </div>
+                <div class="block-small">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
             </div>
         </section>
 
         <section>
             <div class="container block">
-                <div class="block-bigger">&nbsp</div>
+                <div class="block-bigger">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="...">
+                    <div class="btn-main">
+                        <h2>Pronto a iniziare la tua avventura?</h2>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-arrow-down-long"></i>
+                            Scarica per Mac</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
