Stile main (onda + correzioni)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="header-block">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
-                    <div class="btn-header">
+                    <div class="header-btn">
                         <button class="btn btn-light">
                             <i class="fa-solid fa-arrow-down-long"></i>
                             Scarica per Mac
@@ -96,11 +96,12 @@
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="...">
-                    <div class="btn-main">
-                        <h2>Pronto a iniziare la tua avventura?</h2>
+                    <div class="main-btn">
+                        <h3>Pronto a iniziare la tua avventura?</h3>
                         <button class="btn btn-primary">
                             <i class="fa-solid fa-arrow-down-long"></i>
-                            Scarica per Mac</button>
+                            Scarica per Mac
+                        </button>
                     </div>
                 </div>
             </div>
