--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-top">
             <nav class="nav">
                 <div class="nav-logo">
-                    <a href="#"><img src="img/logo.svg" alt="Discord Logo"></a>
+                    <a href="#"><img src="img/logo.svg" alt="..."></a>
                 </div>
                 <ul class="nav-links">
                     <li> <a href="#">Scarica</a> </li>
@@ -112,19 +112,73 @@
         <section>
             <!-- FOOTER SOPRA -->
             <div class="container block">
-                <div class="footer-col-big">&nbsp</div>
-                <div class="footer-col-small">&nbsp</div>
-                <div class="footer-col-small">&nbsp</div>
-                <div class="footer-col-small">&nbsp</div>
-                <div class="footer-col-small">&nbsp</div>
+                <div class="footer-col-big">
+                    <h3>Il tuo posto per parlare</h3>
+                    <img src="img/ita.png" alt="...">
+                    <p>Italiano <i class="fa-solid fa-chevron-down"></i> </p>
+                    <div class="footer-icons">
+                       <a href="#"> <i class="fa-brands fa-twitter"></i> </a>
+                       <a href="#"> <i class="fa-brands fa-instagram"></i> </a>
+                       <a href="#"> <i class="fa-brands fa-facebook"></i> </a>
+                       <a href="#"> <i class="fa-brands fa-youtube"></i> </a>
+                    </div>
+                </div>
+
+                <div class="footer-col-small">
+                    <h4>Prodotto</h4>
+                    <ul>
+                        <li> <a href="#">Scarica</a> </li>
+                        <li> <a href="#">Perchè Discord</a> </li>
+                        <li> <a href="#">Nitro</a> </li>
+                        <li> <a href="#">Sicurezza</a> </li>
+                        <li> <a href="#">Assistenza</a> </li>
+                    </ul>
+                </div>
+                <div class="footer-col-small">
+                    <h4>Compagnia</h4>
+                    <ul>
+                        <li> <a href="#">Chi siamo</a> </li>
+                        <li> <a href="#">Lavora con noi</a> </li>
+                        <li> <a href="#">Marchio</a> </li>
+                        <li> <a href="#">Redazione</a> </li>
+                        <li> <a href="#">Negozio</a> </li>
+                    </ul>
+                </div>
+                <div class="footer-col-small">
+                    <h4>Risorse</h4>
+                    <ul>
+                        <li> <a href="#">Scarica</a> </li>
+                        <li> <a href="#">Perchè Discord</a> </li>
+                        <li> <a href="#">Nitro</a> </li>
+                        <li> <a href="#">Sicurezza</a> </li>
+                        <li> <a href="#">Assistenza</a> </li>
+                        <li> <a href="#">Scarica</a> </li>
+                        <li> <a href="#">Perchè Discord</a> </li>
+                        <li> <a href="#">Nitro</a> </li>
+                        <li> <a href="#">Sicurezza</a> </li>
+                        <li> <a href="#">Assistenza</a> </li>
+                    </ul>
+                </div>
+                <div class="footer-col-small">
+                    <h4>Norme</h4>
+                    <ul>
+                        <li> <a href="#">Scarica</a> </li>
+                        <li> <a href="#">Perchè Discord</a> </li>
+                        <li> <a href="#">Nitro</a> </li>
+                        <li> <a href="#">Sicurezza</a> </li>
+                        <li> <a href="#">Assistenza</a> </li>
+                    </ul>
+                </div>
             </div>
 
-            <hr>
+            <hr class="container">
 
             <!-- FOOTER SOTTO -->
             <div class="container footer-nav">
-                <div class="footer-nav-logo">Logo</div>
-                <button class="footer-nav-button">Bottone</button>
+                <div class="footer-nav-logo">
+                    <a href="#"><img src="img/logo.svg" alt="..."></a>
+                </div>
+                <button class="footer-nav-button btn btn-primary">Registrati</button>
             </div>
 
         </section>
